<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/second_result_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_result"
        android:textColor="#A13535"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/first_result_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_result"
        android:textColor="#A13535"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/second_result_id"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spiner_type_id"
        app:layout_constraintVertical_bias="0.898" />

    <TextView
        android:id="@+id/second_unit_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <TextView
        android:id="@+id/first_unit_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/third_unit_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <TextView
        android:id="@+id/third_result_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_result"
        android:textColor="#A13535"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <Spinner
        android:id="@+id/spiner_type_id"
        android:layout_width="150dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <EditText
        android:id="@+id/et_input_id"
        android:layout_width="202dp"
        android:layout_height="92dp"
        android:autofillHints=""
        android:ems="20"
        android:inputType="numberDecimal"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:text="@string/input"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toEndOf="@+id/spiner_type_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <ImageButton
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginBottom="16dp"
        android:onClick="CalculateCelcius"
        android:rotationX="0"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:srcCompat="@drawable/celsius" />

    <ImageButton
        android:id="@+id/imageView2"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:onClick="CalculateMetre"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spiner_type_id"
        app:layout_constraintVertical_bias="0.961"
        app:srcCompat="@drawable/metre" />

    <ImageButton
        android:id="@+id/imageView3"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginBottom="16dp"
        android:onClick="CalculateKilograms"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:srcCompat="@drawable/kilograms" />

</androidx.constraintlayout.widget.ConstraintLayout>